updated segm code to consider processed mri

--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -36,12 +36,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 0\n",
+    "RUN_ID = 10\n",
+    "USE_PROCESSED = True\n",
     "MAX_EPOCHS = 2000\n",
     "TRAIN_DATA_SIZE = None\n",
     "BATCHSIZE_TRAIN = 2\n",
     "VAL_INTERVAL = 10\n",
-    "# TRAIN_RATIO = 0.8\n",
     "RANDOM_SEED = 0\n",
     "ROOT_DIR = \"/scratch1/sachinsa/brats_seg\"\n",
     "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\"\n",
@@ -56,11 +56,11 @@
     "\n",
     "logger.info(\"PARAMETERS\\n-----------------\")\n",
     "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
+    "logger.info(f\"USE_PROCESSED: {USE_PROCESSED}\")\n",
     "logger.info(f\"MAX_EPOCHS: {MAX_EPOCHS}\")\n",
     "logger.info(f\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
     "logger.info(f\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
     "logger.info(f\"VAL_INTERVAL: {VAL_INTERVAL}\")\n",
-    "# logger.info(f\"TRAIN_RATIO: {TRAIN_RATIO}\")\n",
     "logger.info(f\"RANDOM_SEED: {RANDOM_SEED}\")\n",
     "logger.info(f\"ROOT_DIR: {ROOT_DIR}\")\n",
     "print(\"\")"
@@ -82,10 +82,10 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import shutil\n",
-    "import tempfile\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
+    "import pdb\n",
+    "import pandas as pd\n",
     "import pickle\n",
     "\n",
     "from monai.apps import DecathlonDataset\n",
@@ -105,8 +105,11 @@
     "from tqdm import tqdm\n",
     "\n",
     "import torch\n",
+    "from torch.utils.data import Subset\n",
     "\n",
-    "from utils.transforms import tumor_seg_transform as data_transform\n",
+    "from utils.dataset import BraTSDataset\n",
+    "from utils.model import create_SegResNet, inference\n",
+    "from utils.transforms import tumor_seg_transform\n",
     "\n",
     "# print_config()"
    ]
@@ -145,23 +148,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup transforms for training and validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_transform = data_transform['train']\n",
-    "val_transform = data_transform['val']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Load data"
    ]
   },
@@ -173,16 +159,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Quickly load data with DecathlonDataset\n",
-    "\n",
-    "Here we use `DecathlonDataset` to automatically download and extract the dataset.\n",
-    "It inherits MONAI `CacheDataset`, if you want to use less memory, you can set `cache_num=N` to cache N items for training and use the default args to cache all the items for validation, it depends on your memory size."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -190,33 +166,30 @@
    },
    "outputs": [],
    "source": [
-    "from torch.utils.data import Subset\n",
-    "\n",
-    "# here we don't cache any data in case out of memory issue\n",
-    "train_dataset = DecathlonDataset(\n",
-    "    root_dir=DATA_ROOT_DIR,\n",
-    "    task=\"Task01_BrainTumour\",\n",
-    "    transform=train_transform,\n",
-    "    section=\"training\",\n",
-    "    download=True,\n",
-    "    cache_rate=0.0,\n",
-    "    num_workers=8,#4,\n",
-    ")\n",
-    "val_dataset = DecathlonDataset(\n",
-    "    root_dir=DATA_ROOT_DIR,\n",
-    "    task=\"Task01_BrainTumour\",\n",
-    "    transform=val_transform,\n",
-    "    section=\"validation\",\n",
-    "    download=False,\n",
-    "    cache_rate=0.0,\n",
-    "    num_workers=8,#4,\n",
+    "train_dataset = BraTSDataset(\n",
+    "    version='2017',\n",
+    "    processed = USE_PROCESSED,\n",
+    "    section = 'training',\n",
+    "    seed = RANDOM_SEED,\n",
+    "    transform = tumor_seg_transform['train']\n",
     ")\n",
     "\n",
+    "val_dataset = BraTSDataset(\n",
+    "    version='2017',\n",
+    "    processed = USE_PROCESSED,\n",
+    "    section = 'validation',\n",
+    "    seed = RANDOM_SEED,\n",
+    "    transform = tumor_seg_transform['val']\n",
+    ")\n",
+    "\n",
+    "# TODO: add logic to get subset inside BraTSDataset\n",
     "if TRAIN_DATA_SIZE:\n",
     "    train_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE)))\n",
     "    val_dataset = Subset(val_dataset, list(range(TRAIN_DATA_SIZE//4)))\n",
     "\n",
     "BATCHSIZE_VAL = BATCHSIZE_TRAIN\n",
+    "\n",
+    "# Create data loaders\n",
     "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=True, num_workers=8)\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCHSIZE_VAL, shuffle=False, num_workers=8)\n",
     "\n",
@@ -224,6 +197,18 @@
     "logger.debug(f\"Length of dataset: {len(train_dataset)}, {len(val_dataset)}\")\n",
     "logger.debug(f\"Batch-size: {BATCHSIZE_TRAIN}, {BATCHSIZE_VAL}\")\n",
     "logger.debug(f\"Length of data-loaders: {len(train_loader)}, {len(val_loader)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load masks\n",
+    "mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
+    "train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
+    "val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
    ]
   },
   {
@@ -247,32 +232,8 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda:0\")\n",
-    "model = SegResNet(\n",
-    "    blocks_down=[1, 2, 2, 4],\n",
-    "    blocks_up=[1, 1, 1],\n",
-    "    init_filters=16,\n",
-    "    in_channels=4,\n",
-    "    out_channels=3,\n",
-    "    dropout_prob=0.2,\n",
-    ").to(device)\n",
+    "model = create_SegResNet(device)\n",
     "logger.debug(\"Model defined\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate and display the total number of parameters\n",
-    "def count_parameters(model):\n",
-    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "\n",
-    "total_params = count_parameters(model)\n",
-    "logger.debug(f\"Total number of trainable parameters: {total_params}\")\n",
-    "\n",
-    "# Print the model architecture\n",
-    "# logger.debug(f\"Model Architecture:\\n {model}\")"
    ]
   },
   {
@@ -312,25 +273,7 @@
     "\n",
     "post_trans = Compose([Activations(sigmoid=True), AsDiscrete(threshold=0.5)])\n",
     "\n",
-    "\n",
-    "# define inference method\n",
-    "def inference(input):\n",
-    "    def _compute(input):\n",
-    "        return sliding_window_inference(\n",
-    "            inputs=input,\n",
-    "            roi_size=(240, 240, 160),\n",
-    "            sw_batch_size=1,\n",
-    "            predictor=model,\n",
-    "            overlap=0.5,\n",
-    "        )\n",
-    "\n",
-    "    with torch.amp.autocast('cuda'):\n",
-    "        return _compute(input)\n",
-    "\n",
-    "\n",
-    "# use amp to accelerate training\n",
-    "scaler = torch.cuda.amp.GradScaler()\n",
-    "# enable cuDNN benchmark\n",
+    "scaler = torch.amp.GradScaler('cuda')\n",
     "torch.backends.cudnn.benchmark = True"
    ]
   },
@@ -338,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Execute a typical PyTorch training process"
+    "## Train the model"
    ]
   },
   {
@@ -372,14 +315,16 @@
     "    for batch_data in train_loader:\n",
     "        data_loaded_time = time.time() - step_start\n",
     "        step += 1\n",
-    "        inputs, labels = (\n",
+    "        train_inputs, train_labels = (\n",
     "            batch_data[\"image\"].to(device),\n",
     "            batch_data[\"label\"].to(device),\n",
     "        )\n",
+    "        if USE_PROCESSED:\n",
+    "            train_inputs = train_inputs[:, :4, ...]\n",
     "        optimizer.zero_grad()\n",
     "        with torch.amp.autocast('cuda'):\n",
-    "            outputs = model(inputs)\n",
-    "            loss = loss_function(outputs, labels)\n",
+    "            train_outputs = model(train_inputs)\n",
+    "            loss = loss_function(train_outputs, train_labels)\n",
     "        scaler.scale(loss).backward()\n",
     "        scaler.step(optimizer)\n",
     "        scaler.update()\n",
@@ -404,7 +349,9 @@
     "                    val_data[\"image\"].to(device),\n",
     "                    val_data[\"label\"].to(device),\n",
     "                )\n",
-    "                val_outputs = inference(val_inputs)\n",
+    "                if USE_PROCESSED:\n",
+    "                    val_inputs = val_inputs[:, :4, ...]\n",
+    "                val_outputs = inference(val_inputs, model)\n",
     "                val_outputs = [post_trans(i) for i in decollate_batch(val_outputs)]\n",
     "                dice_metric(y_pred=val_outputs, y=val_labels)\n",
     "                dice_metric_batch(y_pred=val_outputs, y=val_labels)\n",
