--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -56,7 +56,6 @@
         "TRAIN_RATIO = 0.8\n",
         "RANDOM_SEED = 0\n",
         "CONTINUE_TRAINING = False\n",
-        "TRAIN_DATA_SHUFFLE = True\n",
         "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\"\n",
         "\n",
         "# test code sanity (for silly errors)\n",
@@ -86,7 +85,6 @@
         "logger.info(f\"TRAIN_RATIO: {TRAIN_RATIO}\")\n",
         "logger.info(f\"RANDOM_SEED: {RANDOM_SEED}\")\n",
         "logger.info(f\"CONTINUE_TRAINING: {CONTINUE_TRAINING}\")\n",
-        "logger.info(f\"TRAIN_DATA_SHUFFLE: {TRAIN_DATA_SHUFFLE}\")\n",
         "logger.info(f\"ROOT_DIR: {ROOT_DIR}\")\n",
         "print(\"\")"
       ]
@@ -213,7 +211,7 @@
         "BATCHSIZE_VAL = BATCHSIZE_TRAIN\n",
         "\n",
         "# Create data loaders\n",
-        "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=TRAIN_DATA_SHUFFLE,\n",
+        "train_loader = DataLoader(train_dataset, batch_size=BATCHSIZE_TRAIN, shuffle=True,\n",
         "    num_workers=8)\n",
         "val_loader = DataLoader(val_dataset, batch_size=BATCHSIZE_VAL, shuffle=False, num_workers=8)\n",
         "\n",
@@ -329,9 +327,7 @@
       "source": [
         "mse_metric = MSEMetric(reduction=\"mean\")\n",
         "\n",
-        "# use amp to accelerate training\n",
         "scaler = torch.amp.GradScaler('cuda')\n",
-        "# enable cuDNN benchmark\n",
         "torch.backends.cudnn.benchmark = True"
       ]
     },
