--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -178,20 +178,10 @@
    "source": [
     "val_dataset = BraTSDataset(\n",
     "    version='2017',\n",
+    "    section = 'validation',\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = tumor_seg_transform['val']\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: implement the function that randomly samples\n",
-    "# print(np.random.choice(val_dataset.ids))\n",
-    "# print(val_dataset.ids)"
    ]
   },
   {
