work on brats segmentation

--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -221,22 +221,22 @@
     "        \"q3\": [1, 0],\n",
     "    },\n",
     "    \"T1w\": {\n",
-    "        \"input\": [5, -5],\n",
-    "        \"q0\": [5, -5],\n",
+    "        \"input\": [3, -3],\n",
+    "        \"q0\": [3, -3],\n",
     "        \"q1\": [3, 0],\n",
     "        \"q2\": [5, -5],\n",
     "        \"q3\": [1, 0],\n",
     "    },\n",
     "    \"T1Gd\": {\n",
-    "        \"input\": [4, -4],\n",
-    "        \"q0\": [4, -4],\n",
+    "        \"input\": [3, -3],\n",
+    "        \"q0\": [3, -3],\n",
     "        \"q1\": [2, 0],\n",
     "        \"q2\": [4, -4],\n",
     "        \"q3\": [1, 0],\n",
     "    },\n",
     "    \"T2w\": {\n",
-    "        \"input\": [4, -4],\n",
-    "        \"q0\": [4, -4],\n",
+    "        \"input\": [4, -3],\n",
+    "        \"q0\": [4, -3],\n",
     "        \"q1\": [3, 0],\n",
     "        \"q2\": [4, -4],\n",
     "        \"q3\": [1, 0],\n",
@@ -294,13 +294,13 @@
     "\n",
     "    brain_slice = brain_slice.detach().cpu().T\n",
     "\n",
-    "    CLAMP_VIS = True # Clamp visualization\n",
+    "    CLAMP_VIS = False # Clamp visualization\n",
     "    if CLAMP_VIS:\n",
     "        PERCENTILE = True\n",
     "        if not PERCENTILE:\n",
     "            extr = extremes[channels[index]][label]\n",
     "        else:\n",
-    "            extr = [np.percentile(brain_slice, 0.1), np.percentile(brain_slice, 99.9)]\n",
+    "            extr = [np.percentile(brain_slice, 1), np.percentile(brain_slice, 99)]\n",
     "        plt.imshow(brain_slice, cmap=\"gray\",vmin=extr[0],vmax=extr[1])\n",
     "    else:\n",
     "        plt.imshow(brain_slice, cmap=\"gray\")\n",
