--- a/src/analyse_seg_results.ipynb
+++ b/src/analyse_seg_results.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 1\n",
+    "RUN_ID = 10\n",
     "ROOT_DIR = \"/scratch1/sachinsa/brats_seg\"\n",
     "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\""
    ]
@@ -69,7 +69,7 @@
    "source": [
     "max_epochs = len(epoch_loss_values)\n",
     "val_interval = len(epoch_loss_values)//len(metric_values)\n",
-    "print(max_epochs)"
+    "logger.info(f\"Total epochs: {max_epochs}\")"
    ]
   },
   {
@@ -256,16 +256,6 @@
    "outputs": [],
    "source": [
     "_, _, im_length, im_width, im_height = input_image.shape\n",
-    "im_length, im_width, im_height"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, _, im_length, im_width, im_height = input_image.shape\n",
     "h_index = im_height//2\n",
     "label_list = [\"TC\", \"WT\", \"ET\"]\n",
     "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
@@ -299,7 +289,7 @@
     "    plt.xticks([0, im_width - 1], [0, im_width - 1], fontsize=15)\n",
     "    plt.yticks([0, im_length - 1], [0, im_length - 1], fontsize=15)\n",
     "    plt.imshow(val_ds[val_index][\"image\"][i, :, :, 70].detach().cpu().T, cmap=\"gray\")\n",
-    "plt.suptitle(f\"{val_ds.get_indices()[val_index]} (h={h_index}/{im_height})\", fontsize=20)\n",
+    "plt.suptitle(f\"BRATS_{val_ds.get_indices()[val_index]} (h={h_index}/{im_height})\", fontsize=20)\n",
     "plt.show()\n",
     "    \n",
     "plt.figure(\"label\", (18, 12))\n",
@@ -317,32 +307,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with torch.no_grad():\n",
-    "    # i = 0\n",
-    "    for val_data in val_loader:\n",
-    "        # i += 1\n",
-    "        # if i > 4: break\n",
-    "        val_inputs, val_labels = (\n",
-    "            val_data[\"image\"].to(device),\n",
-    "            val_data[\"label\"].to(device),\n",
-    "        )\n",
-    "        val_outputs = inference(val_inputs)\n",
-    "        val_outputs = [post_trans(i) for i in decollate_batch(val_outputs)]\n",
-    "        dice_metric(y_pred=val_outputs, y=val_labels)\n",
-    "        dice_metric_batch(y_pred=val_outputs, y=val_labels)\n",
+    "# with torch.no_grad():\n",
+    "#     # i = 0\n",
+    "#     for val_data in val_loader:\n",
+    "#         # i += 1\n",
+    "#         # if i > 4: break\n",
+    "#         val_inputs, val_labels = (\n",
+    "#             val_data[\"image\"].to(device),\n",
+    "#             val_data[\"label\"].to(device),\n",
+    "#         )\n",
+    "#         val_outputs = inference(val_inputs)\n",
+    "#         val_outputs = [post_trans(i) for i in decollate_batch(val_outputs)]\n",
+    "#         dice_metric(y_pred=val_outputs, y=val_labels)\n",
+    "#         dice_metric_batch(y_pred=val_outputs, y=val_labels)\n",
     "\n",
-    "    metric = dice_metric.aggregate().item()\n",
-    "    metric_batch_org = dice_metric_batch.aggregate()\n",
+    "#     metric = dice_metric.aggregate().item()\n",
+    "#     metric_batch_org = dice_metric_batch.aggregate()\n",
     "\n",
-    "    dice_metric.reset()\n",
-    "    dice_metric_batch.reset()\n",
+    "#     dice_metric.reset()\n",
+    "#     dice_metric_batch.reset()\n",
     "\n",
-    "metric_tc, metric_wt, metric_et = metric_batch_org[0].item(), metric_batch_org[1].item(), metric_batch_org[2].item()\n",
+    "# metric_tc, metric_wt, metric_et = metric_batch_org[0].item(), metric_batch_org[1].item(), metric_batch_org[2].item()\n",
     "\n",
-    "print(f\"metric: {metric:.3f}\")\n",
-    "print(f\"metric_tc: {metric_tc:.3f}\")\n",
-    "print(f\"metric_wt: {metric_wt:.3f}\")\n",
-    "print(f\"metric_et: {metric_et:.3f}\")"
+    "# print(f\"metric: {metric:.3f}\")\n",
+    "# print(f\"metric_tc: {metric_tc:.3f}\")\n",
+    "# print(f\"metric_wt: {metric_wt:.3f}\")\n",
+    "# print(f\"metric_et: {metric_et:.3f}\")"
    ]
   }
  ],
