updated titles of notebooks

--- a/src/analyse_seg_results.ipynb
+++ b/src/analyse_seg_results.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## To analyse the brain segmentation"
+    "## To analyse the brain segmentation results"
    ]
   },
   {
