--- a/src/generate_mask.ipynb
+++ b/src/generate_mask.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Verify the masking algorithms"
+    "# To generate mask and save it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify the masking algorithms"
    ]
   },
   {
@@ -124,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load masks"
+    "### Load masks to verify"
    ]
   },
   {
