--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -6,7 +6,8 @@
         "id": "PLtiAWdGKX7J"
       },
       "source": [
-        "# Deep Imputation of BraTS dataset with MONAI\n",
+        "# Contrast Synthesis with Uncertainty estimation\n",
+        "## Using Quantile Regression and U-Nets\n",
         "\n",
         "The dataset comes from http://medicaldecathlon.com/.  \n",
         "Modality: Multimodal multisite MRI data (FLAIR, T1w, T1gd,T2w)  \n",
