--- a/src/save_results.ipynb
+++ b/src/save_results.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To save uncertainty results for downstream task"
+    "# To save uncertainty results for downstream task"
    ]
   },
   {
