analysing tumor regions

--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -155,7 +155,7 @@
     "import torch\n",
     "\n",
     "from utils.model import create_UNet3D, inference\n",
-    "from utils.transforms import tumor_seg_transform\n",
+    "from utils.transforms import contr_syn_transform_3\n",
     "from utils.dataset import BraTSDataset"
    ]
   },
@@ -180,7 +180,7 @@
     "    version='2017',\n",
     "    section = 'validation',\n",
     "    seed = RANDOM_SEED,\n",
-    "    transform = tumor_seg_transform['val']\n",
+    "    transform = contr_syn_transform_3['val']\n",
     ")"
    ]
   },
