--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -129,7 +129,7 @@
         "\n",
         "from utils.dataset import BraTSDataset\n",
         "from utils.model import create_UNet3D, inference\n",
-        "from utils.transforms import tumor_seg_transform\n",
+        "from utils.transforms import contr_syn_transform_3\n",
         "\n",
         "# print_config()"
       ]
@@ -194,14 +194,14 @@
         "    version='2017',\n",
         "    section = 'training',\n",
         "    seed = RANDOM_SEED,\n",
-        "    transform = tumor_seg_transform['train']\n",
+        "    transform = contr_syn_transform_3['train']\n",
         ")\n",
         "\n",
         "val_dataset = BraTSDataset(\n",
         "    version='2017',\n",
         "    section = 'validation',\n",
         "    seed = RANDOM_SEED,\n",
-        "    transform = tumor_seg_transform['val']\n",
+        "    transform = contr_syn_transform_3['val']\n",
         ")\n",
         "\n",
         "# TODO: add logic to get subset inside BraTSDataset\n",
