--- a/src/save_results.ipynb
+++ b/src/save_results.ipynb
@@ -43,7 +43,7 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "from utils.model import create_UNet3D, inference\n",
-    "from utils.transforms import tumor_seg_transform\n",
+    "from utils.transforms import contr_syn_transform_3\n",
     "from utils.dataset import BraTSDataset\n",
     "\n",
     "logger = Logger(log_level='DEBUG')"
@@ -80,7 +80,7 @@
     "    version='2017',\n",
     "    section='all',\n",
     "    seed = RANDOM_SEED,\n",
-    "    transform = tumor_seg_transform['val']\n",
+    "    transform = contr_syn_transform_3['val']\n",
     ")\n",
     "all_loader = DataLoader(all_dataset, batch_size=1, shuffle=False, num_workers=8)"
    ]
